Moviendo la carpeta parece que se borro su link de los IBOutlet del login que iban al content view y al eje y del contenido view Esta es la corrección a ese problema y ya no da errores

--- a/Proyecto-Mejia-CaraLibro/Base.lproj/Main.storyboard
+++ b/Proyecto-Mejia-CaraLibro/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Btt-85-plh">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -127,6 +128,10 @@
                         </connections>
                     </view>
                     <navigationItem key="navigationItem" id="t6B-Nw-H2Q"/>
+                    <connections>
+                        <outlet property="anchorContentCenterY" destination="fZe-Fz-17l" id="zdj-Ky-rya"/>
+                        <outlet property="viewContent" destination="fA5-Vo-1GD" id="kkS-Fa-GBa"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
                 <tapGestureRecognizer id="9im-ca-qbN">
